2006-11-08 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/MMapArea.py:
	Add an implicit "current_root" which acts as the
	anchor for new thoughts without being selected

	* src/MainWindow.py:
	Only set / change the mode with pygtk versions > 2.8
	as the function was apparently only introduced
	during 2.10

2006-11-07 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* data/labyrinth-ui.xml:
	* src/MainWindow.py:
	* src/MMapArea.py:
	Add "(Un)Link Thoughts" menu item
	which links or unlinks thoughts when
	2 (and only 2) thoughts are selected
	shortcut: ctrl-L (for want of a better one)

	* data/labyrinth.glade:
	Follow global toolbar style prefs in
	browser window (Jean-François Fortin Tam)

	* src/DrawingThought.py:
	Add erase mode using shift key
	Add erase action to undo list

2006-11-06 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/Browser.py:
	* src/MainWindow.py:
	Fix a couple of typos and unclear messages
	Issue #28 - Josef Vybíral

	* src/MainWindow.py:
	* src/Browser.py:
	* src/utils.py:
	* data/labyrinth-ui.xml:
	* data/labyrinth.glade:
	New, improved Browser window
	Move "Help->About" to Browser window.  Remove from map windows
	Based heavily on a patch from Jean-François Fortin Tam.  Issue #15

	* src/MainWindow.py:
	* data/labyrinth-ui.xml:
	Remove Quit and New actions.  Remove their callbacks
	- New hasn't worked for a while anyway and Quit
	has been removed for a while
	Convert several menu items to use stock labels

2006-11-05 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/TextThought.py:
	Don't draw selected text when
	not editing

	* src/MMapArea.py:
	Implement ctrl-a when no thought
	is being edited

	* src/TextThought.py:
	implement ctrl-a in thoughts.
	Various improvments in handling
	arrow keys

	* src/TextThought.py:
	Make backspace work again at end of text

	* src/TextBufferMarkup.py:
	* src/DrawingThought.py:
	* src/UndoManager.py:
	* src/MainWindow.py:
	* src/BaseThought.py:
	* src/ImageThought.py:
	* src/TextThought.py: